--- a/app/src/main/res/layout/activity_list_gempa.xml
+++ b/app/src/main/res/layout/activity_list_gempa.xml
@@ -7,11 +7,12 @@
     tools:context=".ListGempaActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="385dp"
-        android:layout_height="501dp"
+        android:id="@+id/rv_listgempa"
+        android:layout_width="408dp"
+        android:layout_height="730dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_gempa"/>
+        tools:listitem="@layout/item_gempa" />
 </androidx.constraintlayout.widget.ConstraintLayout>
