--- a/app/src/main/res/layout/item_gempa.xml
+++ b/app/src/main/res/layout/item_gempa.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardGempa"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp">
+    android:layout_height="100dp"
+    android:layout_marginBottom="6dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,10 +18,10 @@
             android:text="Lokasi Gempa"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.142"
+            app:layout_constraintHorizontal_bias="0.049"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.228" />
 
         <TextView
             android:id="@+id/waktuGempa"
@@ -31,7 +31,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/lokasiGempa"
             app:layout_constraintTop_toBottomOf="@+id/lokasiGempa"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.428" />
 
         <TextView
             android:id="@+id/skalaGempa"
